    preventing a correct startup
  * Factored out code that looks for archive start
  * Compile grub4dos from source as opposed to using precompiled
    binaries
  * Added source files for grub4dos and grubutil
  * Updated mythbuntu and cdmenu preseed templates
  * Added CD-boot-helper functionality
  * Reverted grub4dos to revision 63, since revision 64 had issues when
    displaying the menu
  * Trap unhandled exceptions and log/notify the user
  * Fixed CD-boot helper which was failing when extracting CD content
  * Added installation directory as one of the isolist.ini settings
  * Fixed unhandled exception message, which wasn't showing properly
  * Extract ISO from CD instead of copying the files (the latter
    approach is blocked by #243105)
  * Fixed target drive selection in CD-boot helper mode, which wasn't
    checking available free space
  * Set file attributes to normal before recursively removing a
    directory
  * Updated Wubi Icon
  * Added UI support for Windows themes (LP: #325207)
  * Fixed uninstaller, that was not being shown when launched by another
    Wubi instance
  * Fixed show-info, it was using an incorrect distro instance for the
    URL
  * No need to use a second temp directory
  * Display controls with transparent background without artifacts
  * Preliminary gettext support (to be completed)
  * Completed gettext support
  * Merged old translations
  * Use previous distro name in strings during uninstallation progress
  * Provide an option to hide wubi installation in CD menu (LP: #338015)
  * Reverted previous changes as suggested by Evan Dandrea and instead
    will hide Wubi option in CD menu if the drive is larger than
    max_iso_size unless a --force-wubi argument is used (LP: #338015)
  * Modified English strings to make them less technical and added
    missing ones
  * More text string edits

 -- Agostino Russo <agostino.russo@gmail.com>  Thu, 05 Mar 2009 01:36:49 +0000