@@ -173,5 +173,8 @@ wubi (9.04) UNRELEASED; urgency=low
   * Modified English strings to make them less technical and added
     missing ones
   * More text string edits
+  * Ask for confirmation before quitting
+  * Some text edits
+  * No need to set the title of the message boxes
 
- -- Agostino Russo <agostino.russo@gmail.com>  Thu, 05 Mar 2009 01:36:49 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Thu, 05 Mar 2009 08:16:50 +0000
